--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "f58e8427",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "101961a8",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "99acce61",
    "metadata": {},
    "outputs": [
@@ -155,7 +155,7 @@
        "4  /offers/kawasaki-ninja-zx-6r-gasoline-blue-2f8...  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "245c7fef",
    "metadata": {},
    "outputs": [
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "443e74db",
    "metadata": {},
    "outputs": [
@@ -210,7 +210,7 @@
        "(34917, 10)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "3f110953",
    "metadata": {},
    "outputs": [],
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "abcf511c",
    "metadata": {},
    "outputs": [
@@ -326,7 +326,7 @@
        "max   888888888.00 9999999.00 913595.00"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -337,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "6b754c53",
    "metadata": {},
    "outputs": [
@@ -357,7 +357,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -370,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "bbf6af9d",
    "metadata": {},
    "outputs": [
@@ -380,7 +380,7 @@
        "np.int64(5832)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -391,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "cb0ee8f8",
    "metadata": {},
    "outputs": [],
@@ -401,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "8a6830a9",
    "metadata": {},
    "outputs": [
@@ -411,7 +411,7 @@
        "np.int64(0)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -430,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "31ee7abf",
    "metadata": {},
    "outputs": [
@@ -456,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "id": "e42fc70a",
    "metadata": {},
    "outputs": [
@@ -470,7 +470,7 @@
        "Name: power, dtype: float64"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -482,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "id": "a2c8b1c9",
    "metadata": {},
    "outputs": [],
@@ -492,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
    "id": "c1e77b34",
    "metadata": {},
    "outputs": [
@@ -544,19 +544,6 @@
        "      <td>/offers/sym-symnh-x-vendue-indisponible-gasoli...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6857</th>\n",
-       "      <td>123456789</td>\n",
-       "      <td>24</td>\n",
-       "      <td>175.00</td>\n",
-       "      <td>EBR RS</td>\n",
-       "      <td>11/2011</td>\n",
-       "      <td>Gasoline</td>\n",
-       "      <td>Manual</td>\n",
-       "      <td>Used</td>\n",
-       "      <td>EBR 1190 RS Nieuw !</td>\n",
-       "      <td>/offers/ebr-rs-ebr-1190-rs-nieuw-gasoline-blac...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>20925</th>\n",
        "      <td>123456789</td>\n",
        "      <td>24000</td>\n",
@@ -570,30 +557,43 @@
        "      <td>/offers/buell-xb-12-gasoline-red-6bd3eec5-449d...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>32668</th>\n",
+       "      <th>6857</th>\n",
+       "      <td>123456789</td>\n",
+       "      <td>24</td>\n",
+       "      <td>175.00</td>\n",
+       "      <td>EBR RS</td>\n",
+       "      <td>11/2011</td>\n",
+       "      <td>Gasoline</td>\n",
+       "      <td>Manual</td>\n",
+       "      <td>Used</td>\n",
+       "      <td>EBR 1190 RS Nieuw !</td>\n",
+       "      <td>/offers/ebr-rs-ebr-1190-rs-nieuw-gasoline-blac...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27266</th>\n",
+       "      <td>9999999</td>\n",
+       "      <td>9999999</td>\n",
+       "      <td>1358.00</td>\n",
+       "      <td>Harley-Davidson Bad Boy</td>\n",
+       "      <td>01/2020</td>\n",
+       "      <td>Diesel</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Used</td>\n",
+       "      <td>test big images</td>\n",
+       "      <td>/offers/harley-davidson-bad-boy-test-big-image...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25011</th>\n",
        "      <td>9999999</td>\n",
        "      <td>9999999</td>\n",
        "      <td>12.00</td>\n",
-       "      <td>Kawasaki 400 S3</td>\n",
-       "      <td>04/2019</td>\n",
+       "      <td>Honda ATC 125</td>\n",
+       "      <td>03/2019</td>\n",
        "      <td>Gasoline</td>\n",
        "      <td>NaN</td>\n",
        "      <td>Used</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>/offers/kawasaki-400-s3-gasoline-green-0ff295c...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12571</th>\n",
-       "      <td>9999999</td>\n",
-       "      <td>9999999</td>\n",
-       "      <td>135.00</td>\n",
-       "      <td>BMW C 400 GT</td>\n",
-       "      <td>01/2021</td>\n",
-       "      <td>LPG</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Used</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>/offers/bmw-c-400-gt-lpg-green-a8ba900e-ea46-4...</td>\n",
+       "      <td>/offers/honda-atc-125-gasoline-green-3018115f-...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -679,25 +679,25 @@
        "</div>"
       ],
       "text/plain": [
-       "           price  mileage  power             make_model     date      fuel  \\\n",
-       "23654  888888888     1196  10.00            SYM SYMNH X  08/2019  Gasoline   \n",
-       "6857   123456789       24 175.00                 EBR RS  11/2011  Gasoline   \n",
-       "20925  123456789    24000 101.00            Buell XB 12  06/2009  Gasoline   \n",
-       "32668    9999999  9999999  12.00        Kawasaki 400 S3  04/2019  Gasoline   \n",
-       "12571    9999999  9999999 135.00           BMW C 400 GT  01/2021       LPG   \n",
-       "...          ...      ...    ...                    ...      ...       ...   \n",
-       "4285          50     1000   8.00        Husaberg FE 550  11/2006  Gasoline   \n",
-       "34899         50      390   1.00          Kymco Like 50  06/2011  Gasoline   \n",
-       "19000         50    40000  19.00  Aprilia Sportcity 200  05/2006  Gasoline   \n",
-       "15003          2    23000  14.00            Dnepr MT 10  09/1984  Gasoline   \n",
-       "8563           1    16010  63.00           KTM 690 Duke  10/2009  Gasoline   \n",
+       "           price  mileage   power               make_model     date      fuel  \\\n",
+       "23654  888888888     1196   10.00              SYM SYMNH X  08/2019  Gasoline   \n",
+       "20925  123456789    24000  101.00              Buell XB 12  06/2009  Gasoline   \n",
+       "6857   123456789       24  175.00                   EBR RS  11/2011  Gasoline   \n",
+       "27266    9999999  9999999 1358.00  Harley-Davidson Bad Boy  01/2020    Diesel   \n",
+       "25011    9999999  9999999   12.00            Honda ATC 125  03/2019  Gasoline   \n",
+       "...          ...      ...     ...                      ...      ...       ...   \n",
+       "4285          50     1000    8.00          Husaberg FE 550  11/2006  Gasoline   \n",
+       "34899         50      390    1.00            Kymco Like 50  06/2011  Gasoline   \n",
+       "19000         50    40000   19.00    Aprilia Sportcity 200  05/2006  Gasoline   \n",
+       "15003          2    23000   14.00              Dnepr MT 10  09/1984  Gasoline   \n",
+       "8563           1    16010   63.00             KTM 690 Duke  10/2009  Gasoline   \n",
        "\n",
        "            gear         offer_type                      version  \\\n",
        "23654     Manual               Used  !!! VENDUE !!! indisponible   \n",
-       "6857      Manual               Used          EBR 1190 RS Nieuw !   \n",
        "20925     Manual               Used                          NaN   \n",
-       "32668        NaN               Used                          NaN   \n",
-       "12571        NaN               Used                          NaN   \n",
+       "6857      Manual               Used          EBR 1190 RS Nieuw !   \n",
+       "27266        NaN               Used              test big images   \n",
+       "25011        NaN               Used                          NaN   \n",
        "...          ...                ...                          ...   \n",
        "4285         NaN               Used                        Force   \n",
        "34899        NaN               Used                          NaN   \n",
@@ -707,10 +707,10 @@
        "\n",
        "                                                    link  \n",
        "23654  /offers/sym-symnh-x-vendue-indisponible-gasoli...  \n",
-       "6857   /offers/ebr-rs-ebr-1190-rs-nieuw-gasoline-blac...  \n",
        "20925  /offers/buell-xb-12-gasoline-red-6bd3eec5-449d...  \n",
-       "32668  /offers/kawasaki-400-s3-gasoline-green-0ff295c...  \n",
-       "12571  /offers/bmw-c-400-gt-lpg-green-a8ba900e-ea46-4...  \n",
+       "6857   /offers/ebr-rs-ebr-1190-rs-nieuw-gasoline-blac...  \n",
+       "27266  /offers/harley-davidson-bad-boy-test-big-image...  \n",
+       "25011  /offers/honda-atc-125-gasoline-green-3018115f-...  \n",
        "...                                                  ...  \n",
        "4285   /offers/husaberg-fe-550-force-gasoline-blue-ec...  \n",
        "34899  /offers/kymco-like-50-gasoline-white-70b79c85-...  \n",
@@ -721,7 +721,7 @@
        "[29085 rows x 10 columns]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -732,7 +732,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 16,
    "id": "c694e104",
    "metadata": {},
    "outputs": [
@@ -748,7 +748,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -760,7 +760,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 17,
    "id": "e7f35417",
    "metadata": {},
    "outputs": [
@@ -778,11 +778,11 @@
        "MV Agusta 750 S              1\n",
        "Suzuki GN 250                1\n",
        "Cagiva                       1\n",
-       "IO 1500 GT                   1\n",
+       "Ride Paradise 50             1\n",
        "Name: count, Length: 2168, dtype: int64"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -794,7 +794,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 18,
    "id": "954c54dd",
    "metadata": {},
    "outputs": [
@@ -802,30 +802,100 @@
      "data": {
       "text/plain": [
        "fuel\n",
+       "LPG                   5003124.50\n",
        "Diesel                 163621.05\n",
+       "Gasoline                57857.77\n",
+       "Others                   9453.84\n",
        "Electric                 6202.65\n",
        "Electric/Gasoline        6037.38\n",
-       "Gasoline                57857.77\n",
-       "LPG                   5003124.50\n",
-       "Others                   9453.84\n",
        "Two Stroke Gasoline      3713.34\n",
        "Name: price, dtype: float64"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "fuel_avg_price = df.groupby(\"fuel\")[\"price\"].mean()\n",
-    "fuel_avg_price"
+    "fuel_avg_price.sort_values(ascending=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "251c3f61",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "gear\n",
+       "Automatic        10633.41\n",
+       "Manual           22415.93\n",
+       "Semi-automatic   16699.47\n",
+       "Name: mileage, dtype: float64"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gear_median_mileage = df.groupby(\"gear\")[\"mileage\"].mean()\n",
+    "gear_median_mileage"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "b3e867a7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "offer_type\n",
+       "Used                913595.00\n",
+       "New                    888.00\n",
+       "Antique / Classic      500.00\n",
+       "Demonstration          218.00\n",
+       "Pre-registered         218.00\n",
+       "Name: power, dtype: float64"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "offer_max_power = df.groupby(\"offer_type\")[\"power\"].max()\n",
+    "offer_max_power.sort_values(ascending=False)\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "251c3f61",
+   "id": "c274b201",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1e763b35",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2a7aa6a2",
    "metadata": {},
    "outputs": [],
    "source": []
